--- a/frontend.conf
+++ b/frontend.conf
@@ -2,6 +2,8 @@ server {
     listen 80;
     server_name web-svc;
 
+    root /usr/share/nginx/html;
+
     location / {
         proxy_set_header Host $http_host;
         proxy_set_header X-Real-IP $remote_addr;
