--- a/frontend.conf
+++ b/frontend.conf
@@ -1,8 +1,6 @@
 server {
     listen 80;
-    server_name web-svc;
-
-    root /usr/share/nginx/html;
+    server_name svc-web;
 
     location / {
         proxy_set_header Host $http_host;
@@ -10,5 +8,10 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_pass http://svc-was:8080;
+    }
+
+    location /static/ {
+        autoindex on;
+        alias /usr/share/nginx/html;
     }
 }
