--- a/frontend.conf
+++ b/frontend.conf
@@ -2,16 +2,13 @@ server {
     listen 80;
     server_name svc-web;
 
-    location / {
-        proxy_set_header Host $http_host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_pass http://svc-was:8080;
-    }
+    location = /favicon.ico { access_log off; log_not_found off; }
 
     location /static/ {
-        autoindex on;
-        alias /usr/share/nginx/html;
+        root /usr/share/nginx/html;
+    }
+    location / {
+        include proxy_params;
+        proxy_pass http://svc-was:8080;
     }
 }
