--- a/frontend.conf
+++ b/frontend.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name svc-web;
+    server_name web-svc;
 
     location = /favicon.ico { access_log off; log_not_found off; }
 
@@ -8,7 +8,11 @@ server {
         root /usr/share/nginx/html;
     }
     location / {
-        include proxy_params;
+
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
         proxy_pass http://svc-was:8080;
     }
 }
