--- a/frontend.conf
+++ b/frontend.conf
@@ -1,18 +1,12 @@
 server {
     listen 80;
     server_name web-svc;
-
     location = /favicon.ico { access_log off; log_not_found off; }
-
-    location /static/ {
-        root /usr/share/nginx/html;
-    }
     location / {
-
-        proxy_set_header Host $http_host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
         proxy_pass http://svc-was:8080;
+    }
+    location /static/ {
+        autoindex on;
+        root /usr/share/nginx/html;
     }
 }
